--- a/dtlc/dtlc.cabal
+++ b/dtlc/dtlc.cabal
@@ -47,9 +47,14 @@ extra-source-files: CHANGELOG.md
 library
   -- Modules exported by the library.
   exposed-modules:
+    Dummy,
+    EDTLC,
     DTLC,
     STLC,
-    Sandbox
+    SandboxEDTLC,
+    SandboxDTLC,
+    SandboxSTLC
+    
 
   -- Modules included in this library but not exported.
   -- other-modules:
@@ -66,26 +71,26 @@ library
   -- Base language which the package is written in.
   default-language: Haskell2010
 
-executable dtlc
-    -- .hs or .lhs file containing the Main module.
-    main-is:          Main.hs
+-- executable dtlc
+--     -- .hs or .lhs file containing the Main module.
+--     main-is:          Main.hs
 
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
+--     -- Modules included in this executable, other than Main.
+--     -- other-modules:
 
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
+--     -- LANGUAGE extensions used by modules in this package.
+--     -- other-extensions:
 
-    -- Other library packages from which modules are imported.
-    build-depends:
-        dtlc,
-        base   ^>= 4.12.0.0,
-        parsec ^>= 3.1.13.0,
-        pretty ^>= 1.1.3.6
+--     -- Other library packages from which modules are imported.
+--     build-depends:
+--         dtlc,
+--         base   ^>= 4.12.0.0,
+--         parsec ^>= 3.1.13.0,
+--         pretty ^>= 1.1.3.6
 
 
-    -- Directories containing source files.
-    hs-source-dirs:   app
+--     -- Directories containing source files.
+--     hs-source-dirs:   app
 
-    -- Base language which the package is written in.
-    default-language: Haskell2010
+--     -- Base language which the package is written in.
+--     default-language: Haskell2010
