--- a/dtlc/dtlc.cabal
+++ b/dtlc/dtlc.cabal
@@ -53,7 +53,9 @@ library
     STLC,
     SandboxEDTLC,
     SandboxDTLC,
-    SandboxSTLC
+    SandboxSTLC,
+    Hurkens,
+    FalseStandalone
     
 
   -- Modules included in this library but not exported.
